[gd_scene load_steps=13 format=3 uid="uid://b3qfxrc7k66hc"]

[ext_resource type="Texture2D" uid="uid://g8ks56hi30kr" path="res://Assets/Sprites/base.png" id="1_jjgbg"]
[ext_resource type="Script" uid="uid://77ha64361jtb" path="res://Scripts/main.gd" id="1_kry3j"]
[ext_resource type="PackedScene" uid="uid://b8j68fewfhjb2" path="res://Scenes/pipes.tscn" id="2_21xkr"]
[ext_resource type="PackedScene" uid="uid://dmx8jqdy1qtk" path="res://Scenes/bird.tscn" id="2_bo1nx"]
[ext_resource type="Script" uid="uid://djxc0mai7n5d6" path="res://Scripts/bird.gd" id="3_8gbba"]
[ext_resource type="Script" uid="uid://e624ew0m8d0h" path="res://Scripts/floor_visuals.gd" id="3_jjvhh"]
[ext_resource type="Texture2D" uid="uid://cnyytynvqg68q" path="res://Assets/Sprites/0.png" id="7_6bp64"]
[ext_resource type="Texture2D" uid="uid://dg4rrxf5ffyld" path="res://Assets/Sprites/gameover.png" id="8_344ge"]
[ext_resource type="Texture2D" uid="uid://cj3irfdc1toj6" path="res://Assets/Sprites/message.png" id="9_ynf5e"]
[ext_resource type="Texture2D" uid="uid://dddmqhqihpiip" path="res://Assets/Sprites/background-day.png" id="10_hptm8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bo1nx"]
size = Vector2(516, 75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_21xkr"]
size = Vector2(563, 10)

[node name="Main" type="Node2D"]
process_mode = 3
script = ExtResource("1_kry3j")
PipeScene = ExtResource("2_21xkr")

[node name="Bird" parent="." instance=ExtResource("2_bo1nx")]
process_mode = 1
position = Vector2(240, 523)
script = ExtResource("3_8gbba")

[node name="FloorVisuals" type="Node2D" parent="."]
process_mode = 1
script = ExtResource("3_jjvhh")

[node name="FloorSprite" type="Sprite2D" parent="FloorVisuals"]
position = Vector2(169, 788)
texture = ExtResource("1_jjgbg")

[node name="FloorSprite2" type="Sprite2D" parent="FloorVisuals"]
position = Vector2(505, 788)
texture = ExtResource("1_jjgbg")

[node name="FloorSprite3" type="Sprite2D" parent="FloorVisuals"]
position = Vector2(841, 788)
texture = ExtResource("1_jjgbg")

[node name="Floor" type="StaticBody2D" parent="FloorVisuals" groups=["ground"]]
position = Vector2(24, 785)

[node name="FloorCollider" type="CollisionShape2D" parent="FloorVisuals/Floor"]
position = Vector2(218, -14.5)
shape = SubResource("RectangleShape2D_bo1nx")

[node name="PipeTimer" type="Timer" parent="."]
process_mode = 1
wait_time = 2.0
autostart = true

[node name="Roof" type="StaticBody2D" parent="."]

[node name="RoofCollider" type="CollisionShape2D" parent="Roof"]
position = Vector2(231.5, -5)
shape = SubResource("RectangleShape2D_21xkr")

[node name="ScoreDisplay" type="Node2D" parent="."]
z_index = 1
position = Vector2(257, 40)

[node name="Digit1" type="Sprite2D" parent="ScoreDisplay"]
texture = ExtResource("7_6bp64")

[node name="Digit2" type="Sprite2D" parent="ScoreDisplay"]
position = Vector2(-26, 0)
texture = ExtResource("7_6bp64")

[node name="UI" type="CanvasLayer" parent="."]
process_mode = 3

[node name="GameOverImage" type="TextureRect" parent="UI"]
visible = false
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_344ge")
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="StartGameImage" type="TextureRect" parent="UI"]
visible = false
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("9_ynf5e")
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="BackgroundRoot" type="Node2D" parent="."]

[node name="BackgroundSprite" type="Sprite2D" parent="BackgroundRoot"]
z_index = -2
position = Vector2(240.5, 399.99994)
scale = Vector2(1.6631944, 1.5624999)
texture = ExtResource("10_hptm8")
